style: success message width 100%

--- a/components/agility-pageModules/BlogSubscriptionBanner/blogSubscriptionBanner.module.scss
+++ b/components/agility-pageModules/BlogSubscriptionBanner/blogSubscriptionBanner.module.scss
@@ -97,6 +97,7 @@
         justify-content: center;
         flex-direction: column;
         text-align: center;
+        width: 100%;
         p {
           margin-top: 1rem;
         }
