--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -102,6 +102,24 @@
         object-fit: contain;
       }
     }
+    .iframeWrapper {
+      width: 100%;
+      iframe {
+        width: 100%;
+        aspect-ratio: 16/9;
+      }
+      // Fallback for Safari 14.1 and older
+      @supports not (aspect-ratio: auto) {
+        position: relative;
+        padding-top: 56.25%;
+        iframe {
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
+      }
+    }
   }
   .image,
   .imageLink {
