--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -184,6 +184,10 @@
 // Testimonial Style: Logo on left and text on right
 @include desktop() {
   .clientTestimonial.logoOnLeft {
+    .link {
+      margin-top: 2em;
+      margin-bottom: 0;
+    }
     .content .textContent {
       display: flex;
       align-items: center;
