--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -91,6 +91,9 @@
     @include desktop() {
       margin-top: initial;
     }
+    &.isVideo {
+      width: 100%;
+    }
     span {
       width: 100%;
       height: 100%;
