Added load more button on latest customerstories

--- a/components/agility-pageModules/latestCustomerStories/latestCustomerStories.module.scss
+++ b/components/agility-pageModules/latestCustomerStories/latestCustomerStories.module.scss
@@ -156,4 +156,11 @@
       }
     }
   }
+  .loadMoreButton {
+    margin: 3em auto 0 auto;
+    display: block;
+    cursor: pointer;
+    font-family: 'GalanoGrotesque', sans-serif;
+    font-size: 0.95rem;
+  }
 }
