style: add valid input indicator to forms

--- a/components/agility-pageModules/BlogSubscriptionBanner/blogSubscriptionBanner.module.scss
+++ b/components/agility-pageModules/BlogSubscriptionBanner/blogSubscriptionBanner.module.scss
@@ -71,11 +71,11 @@
           border-radius: 0.5rem;
         }
         select {
-          background-color: transparent;
+          background-color: transparent !important;
         }
         input {
           &:not([type="submit"]) {
-            background-color: transparent;
+            background-color: transparent !important;
           }
         }
         & > div {
