Changed text color on card styled infographics

--- a/components/agility-pageModules/infographic/infographic.module.scss
+++ b/components/agility-pageModules/infographic/infographic.module.scss
@@ -140,7 +140,7 @@
             color: $color-black;
           }
           .itemDefinition {
-            color: $color-gray;
+            color: $color-navy;
           }
         }
       }
