--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -102,11 +102,19 @@
         color: $color-darkblue;
         margin-top: 0.5rem;
         margin-bottom: 1rem;
+        display: flex;
+        align-items: center;
+        font-size: 1rem;
         &:after {
-          content: ">";
-          margin-left: 0.5rem;
-          font-size: 1rem;
+          content: "";
           display: inline-block;
+          padding: 0.15rem;
+          border-right: solid;
+          border-top: solid;
+          margin-left: 0.2rem;
+          border-width: 0.15rem;
+          border-color: #0073aa;
+          transform: rotate(45deg);
         }
       }
     }
