style: changes for customer stories

--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -42,6 +42,18 @@
   }
   .circularImage {
     border-radius: 50%;
+    overflow: hidden;
+    img {
+      object-fit: cover !important;
+    }
+    span {
+      position: relative !important;
+      width: 100% !important;
+      span {
+        width: 100% !important;
+        position: relative !important;
+      }
+    }
   }
   .heading {
     max-width: 37.5rem;
