style: fix for infographic large title layout with more than 3 items

--- a/components/agility-pageModules/infographic/infographic.module.scss
+++ b/components/agility-pageModules/infographic/infographic.module.scss
@@ -6,6 +6,7 @@
   .content {
     display: grid;
     width: 100%;
+    row-gap: 1rem;
     grid-template-columns: repeat(
       auto-fill,
       minmax(max(6.25rem, 100% / 6), 1fr)
@@ -44,12 +45,60 @@
         auto-fill,
         minmax(max(12.5rem, 100% / 4), 1fr)
       );
+      .item {
+        &.itemColumnLargeTitleLayout {
+          padding: 1rem;
+          .itemMedia {
+            display: flex;
+            justify-content: center;
+            img {
+              max-width: 3rem !important;
+            }
+            & > span {
+              min-width: 3rem;
+            }
+          }
+          .itemTextContent {
+            .itemDescription {
+              font-size: 1.2rem;
+            }
+
+            .itemTitle {
+              font-size: 3.5rem;
+            }
+          }
+        }
+      }
     }
     &.is5 {
       grid-template-columns: repeat(
         auto-fill,
         minmax(max(10.9375rem, 100% / 5), 1fr)
       );
+      .item {
+        &.itemColumnLargeTitleLayout {
+          padding: 1rem;
+          .itemMedia {
+            display: flex;
+            justify-content: center;
+            img {
+              max-width: 2.5rem !important;
+            }
+            & > span {
+              min-width: 2.5rem;
+            }
+          }
+          .itemTextContent {
+            .itemDescription {
+              font-size: 1.2rem;
+            }
+
+            .itemTitle {
+              font-size: 3rem;
+            }
+          }
+        }
+      }
     }
 
     &.boxStyle {
