--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -617,6 +617,9 @@
 .pt-1px {
   padding-top: 1px !important;
 }
+.pt-1 {
+  padding-top: $size-1 !important;
+}
 .pt-2 {
   padding-top: $size-2 !important;
 }
