--- a/components/agility-pageModules/blogPostContent/blogPostContent.module.scss
+++ b/components/agility-pageModules/blogPostContent/blogPostContent.module.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import "../../../styles/settings/_mixins.scss";
 @import "../../../styles/settings/_colors.scss";
 @import "../../../styles/settings/_variables.scss";
@@ -96,4 +97,42 @@
 
 .blogPostList {
   background-color: $color-lightgray;
+}
+
+.stickyCtaBanner {
+  position: sticky;
+  top: calc($navbar-height + 1rem);
+  display: grid;
+  grid-template-columns: 100%;
+  gap: 1rem;
+  padding: 2rem 1.5rem;
+  border-radius: 1rem;
+  line-height: 1.3;
+  .stickyCtaBannerImage {
+    overflow: hidden;
+    aspect-ratio: 16/ 9;
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @supports not (aspect-ratio: 16 / 9) {
+      height: 0;
+      position: relative;
+      padding-top: math.div(180px, 320px) * 100%;
+      & > span {
+        display: block !important;
+        position: absolute !important;
+        top: 0 !important;
+        left: 0 !important;
+        width: 100% !important;
+        height: 100% !important;
+      }
+    }
+    & > span {
+      img {
+        object-fit: cover !important;
+      }
+      border-radius: 0.5rem;
+    }
+  }
 }
