--- a/styles/components/_subscribe-blog.scss
+++ b/styles/components/_subscribe-blog.scss
@@ -4,7 +4,7 @@
   padding: 1.75rem;
   position: relative;
   // Eliminate CLS because we load marketo on idle
-  min-height: 32rem;
+/*   min-height: 32rem; */
   @include desktop() {
     max-width: 25vw;
     min-width: 100%;
