added resourceDownload module

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -92,6 +92,10 @@
   &.navy {
     background-color: $color-navy;
     color: white;
+    &:hover {
+      background-color: $color-darkblue;
+      border-color: $color-darkblue;
+    }
   }
 
   &.small {
