chore: add line-height-1-8

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -469,6 +469,9 @@ table {
 .line-height-1 {
   line-height: 1 !important;
 }
+.line-height-1-8 {
+  line-height: 1.8 !important;
+}
 .line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: 3;
