--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -226,7 +226,7 @@
         }
         input:not([type="submit"]),
         select {
-          background-color: $color-white !important;
+          /*           background-color: $color-white !important; */
           box-sizing: border-box;
           border: 0.1rem solid $color-black !important;
         }
