--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -469,6 +469,12 @@ table {
 .line-height-1 {
   line-height: 1 !important;
 }
+.line-height-1-2 {
+  line-height: 1.2 !important;
+}
+.line-height-1-5 {
+  line-height: 1.5 !important;
+}
 .line-height-1-8 {
   line-height: 1.8 !important;
 }
