--- a/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
+++ b/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
@@ -26,6 +26,7 @@
   img {
     border: toRem(4) solid $color-paleblue !important;
     border-radius: toRem(20);
+    cursor: pointer;
   }
 }
 .thumbnailButton {
