feat: add option to set object-fit contain for text grid with media items

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -138,6 +138,12 @@
     padding: 1.5rem;
     height: 100%;
     overflow: hidden;
+    .objectFitContainItemImages {
+      padding: 1rem 0;
+      img {
+        object-fit: contain !important;
+      }
+    }
   }
   &:not(.logoLeftHeaderRight) {
     .textItem {
