--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -659,6 +659,9 @@
 .pr-4 {
   padding-right: $size-4 !important;
 }
+.pl-2 {
+  padding-left: $size-2 !important;
+}
 .pl-4 {
   padding-left: $size-4 !important;
 }
