--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -128,6 +128,13 @@
       }
     }
   }
+  .buttons {
+    display: flex;
+    gap: 1em;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
   // column layout
   .columnLayoutContent {
     display: flex;
