--- a/styles/animations.scss
+++ b/styles/animations.scss
@@ -74,3 +74,11 @@
     animation-delay: 1.6s;
   }
 }
+
+// helper class for removing any svg animations from the first fold
+.first-fold-svg-animation-unset {
+  animation-duration: 0ms !important;
+  * {
+    animation-duration: 0ms !important;
+  }
+}
