--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -560,3 +560,89 @@ mark {
     left: -1.3rem;
   }
 }
+
+//Used to display the big U on the homepage first fold
+.first-fold-big-U::after {
+  margin-left: 0.35rem;
+  margin-bottom: auto;
+  transform: translateY(-24%);
+  margin-top: 0.75rem;
+  @include desktop() {
+    transform: translateY(0%);
+    margin-top: 0;
+  }
+  content: "u";
+  color: transparent;
+  margin-bottom: auto;
+  display: inline-block;
+  background-color: #109fff;
+  width: 65px;
+  height: 63px;
+  clip-path: polygon(
+    92% 11%,
+    92% 59.25%,
+    91.25% 65.25%,
+    90.25% 70.25%,
+    89% 73.25%,
+    87.5% 77.5%,
+    85.25% 81.75%,
+    82.25% 85.25%,
+    79.25% 88.75%,
+    75.25% 91.75%,
+    70.25% 94.25%,
+    66.25% 96%,
+    61.25% 97.75%,
+    56.5% 98.5%,
+    52.75% 99%,
+    48.5% 98.75%,
+    44% 98.5%,
+    39.75% 97.75%,
+    34.25% 96.25%,
+    29.25% 94.5%,
+    25% 92.25%,
+    20.75% 88.75%,
+    17.25% 85.25%,
+    14.25% 81.25%,
+    12.25% 77.25%,
+    9.75% 72%,
+    8.5% 66.75%,
+    7.5% 63%,
+    7.25% 56.25%,
+    6.75% 26.25%,
+    7.2% 23.25%,
+    7.9% 20.5%,
+    9.25% 18%,
+    12.25% 14.7%,
+    14% 13.3%,
+    16% 12.3%,
+    18.5% 11.4%,
+    22.5% 11%,
+    27.75% 11%,
+    27.75% 54.25%,
+    28% 60.75%,
+    29.25% 66.25%,
+    31.25% 70.25%,
+    33.5% 73.25%,
+    36.5% 76%,
+    40.5% 77.75%,
+    44.25% 79%,
+    49.25% 79.25%,
+    54.25% 79.25%,
+    58.25% 78.25%,
+    62.25% 76.25%,
+    65.25% 73.25%,
+    67.5% 70.5%,
+    69.25% 67.5%,
+    71.02% 61.76%,
+    71.75% 56.25%,
+    71.75% 27%,
+    72.15% 22.25%,
+    73% 20%,
+    73.75% 18.5%,
+    75% 17%,
+    76.75% 15%,
+    79.75% 12.8%,
+    82.75% 11.6%,
+    85.5% 11%
+  );
+}
