--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -14,6 +14,12 @@
   transition: all 150ms;
   border: 0.2rem solid $color-navy;
   vertical-align: center;
+  // Fix: force Safari-specific button styling to not apply in forms
+  @media not all and (min-resolution: 0.001dpcm) {
+    @supports (-webkit-appearance: none) {
+      -webkit-appearance: none;
+    }
+  }
   &.small,
   .mktoButton {
     font-size: 1rem;
