--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -567,6 +567,11 @@ mark {
   margin-bottom: auto;
   transform: translateY(-24%);
   margin-top: 0.75rem;
+  // cls fix for small mobile screens
+  @media (max-width: 390px) {
+    display: block;
+    margin: 0.5rem auto 0 auto;
+  }
   @include desktop() {
     transform: translateY(0%);
     margin-top: 0;
